--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="note-panel">
         <h2>Add note</h2>
         <label for="category">Select a category</label>
-        <select id="category">
+        <select id="category" onchange="selectValue()">
             <option value="0" disabled selected>-- select a category</option>
             <option value="1">JavaScript learning</option>
             <option value="1">Angular learning</option>
