--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <label for="category">Select a category</label>
         <select id="category" onchange="selectValue()">
             <option value="0" disabled selected>-- select a category</option>
-            <option value="1">JavaScript learning</option>
-            <option value="1">Angular learning</option>
-            <option value="1">English</option>
-            <option value="1">Other</option>
+            <option value="1">JavaScript/option>
+            <option value="1">Angular</option>
+            <option value="1">HTML</option>
+            <option value="1">TypeScript</option>
         </select>
 
         <label for="text">Type your note text</label>
