little change in HTML DOM

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="menu">
         <h1><i class="fas fa-solid fa-note">MyNotes</i></h1>
         <div class="menu-buttons">
-            <button class="add icon"><i class="fas fa-plus"></i>Add</button>
-            <button class="delete-all icon"><i class="fas fa-trash-alt">Remove all</i></button>
+            <button class="add icon"><i class="fas fa-plus"></i> ADD</button>
+            <button class="delete-all icon"><i class="fas fa-trash"> remove</i></button>
         </div>
     </div>
 
     <div class="note-area">
-        <div class="note">
+        <!-- <div class="note">
             <div class="note-header">
                 <h3 class="note-title">Note #1</h3>
                 <button class="delete-note">
@@ -31,7 +31,7 @@
             <div class="note-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque necessitatibus
                 voluptates architecto deserunt deleniti qui consectetur incidunt, nobis consequuntur eaque labore, iure
                 non distinctio nostrum similique sunt fugiat quasi. Perspiciatis?</div>
-        </div>
+        </div> -->
     </div>
 
     <div class="note-panel">
@@ -39,9 +39,9 @@
         <label for="category">Select a category</label>
         <select id="category" onchange="selectValue()">
             <option value="0" disabled selected>-- select a category</option>
-            <option value="1">JavaScript/option>
+            <option value="1">JavaScript</option>
             <option value="1">Angular</option>
-            <option value="1">HTML</option>
+            <option value="1">HTML/CSS</option>
             <option value="1">TypeScript</option>
         </select>
 
