create deleteAllNote & deleteNote function.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1><i class="fas fa-solid fa-note">MyNotes</i></h1>
         <div class="menu-buttons">
             <button class="add icon"><i class="fas fa-plus"></i> ADD</button>
-            <button class="delete-all icon"><i class="fas fa-trash"> remove</i></button>
+            <button class="delete-all icon"><i class="fas fa-trash"> remove all</i></button>
         </div>
     </div>
 
