--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body>
     <div class="menu">
-        <h1><i class="fas fa-solid fa-note">MyNotes</i></h1>
+        <h1><i class="fa-solid fa-note"></i>MyNotes</h1>
         <div class="menu-buttons">
-            <button class="add icon"><i class="fas fa-plus"></i> ADD</button>
-            <button class="delete-all icon"><i class="fas fa-trash"> remove all</i></button>
+            <button class="add icon"><i class="fas fa-plus"></i> Add</button>
+            <button class="delete-all icon"><i class="fas fa-trash"></i> Remove all</button>
         </div>
     </div>
 
